Files has been changed

--- a/hozzaadas.html
+++ b/hozzaadas.html
@@ -78,11 +78,11 @@
                 <form id="cardForm" action="" class="form-horizontal">
                     <div class="form-group">
                         <label for="">Megnevezés:</label>
-                        <input id="name1" name="megnev1" type="text" class="form-control" required>
+                        <input id="name1" name="Megnevezés1" type="text" class="form-control" required>
                     </div>
                     <div class="form-group">
                         <label for="">Nyelv:</label>
-                        <select id="selectNyelv1" name="nyelv1" multiple class="form-control">
+                        <select id="selectNyelv1" name="Nyelv1" multiple class="form-control">
                             <option value="Angol">Angol</option>
                             <option value="Német">Német</option>
                             <option value="Francia">Francia</option>
@@ -95,11 +95,11 @@
                     </div>
                     <div class="form-group">
                         <label for="">Megnevezés:</label>
-                        <input id="name2" name="megnev2" type="text" class="form-control" required>
+                        <input id="name2" name="Megnevezés2" type="text" class="form-control" required>
                     </div>
                     <div class="form-group">
                         <label for="">Nyelv:</label>
-                        <select id="selectNyelv2" name="nyelv2" multiple class="form-control">
+                        <select id="selectNyelv2" name="Nyelv2" multiple class="form-control">
                             <option value="Angol">Angol</option>
                             <option value="Német">Német</option>
                             <option value="Francia">Francia</option>
@@ -112,7 +112,7 @@
                     </div>
                     <div class="form-group">
                         <label for="">Témakör:</label>
-                        <select id="selectTema" name="tema" multiple class="form-control">
+                        <select id="selectTema" name="Témakör" multiple class="form-control">
                             <option value="Bemutatkozás">Bemutatkozás</option>
                             <option value="Otthon">Otthon</option>
                             <option value="Munkahely">Munkahely</option>
