--- a/listak.html
+++ b/listak.html
@@ -6,11 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listák</title>
     <link rel="stylesheet" href="./lib/bootstrap-4.5.0-dist/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- <script src="./node_modules/popper.js/dist/popper.min.js"></script> -->
-    <script src="./lib/bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./lib/bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <!-- <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.6.2/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.flash.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.html5.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.print.min.js"></script> -->
+    <!--PDFMake-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
 </head>
 
 <body>
@@ -51,8 +60,8 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="keresés" aria-label="Search">
-                <button class="btn btn-outline-info my-2 my-sm-0" type="submit"><i
+                <input id="listInput" class="form-control mr-sm-2" type="search" placeholder="keresés" aria-label="Search">
+                <button class="btn btn-outline-info my-2 my-sm-0" type="button" onclick="getFilteredCards()"><i
                         class="fa fa-search"></i></i></button>
             </form>
         </div>
@@ -70,11 +79,11 @@
             </div>
             <div class="col-sm-4"></div>
             <div class="col-sm-2">
-                <div>
-                    <button id="listBtn" class="btn btn-block btn-light" onclick="getCards()">
+                <div class="">
+                    <button id="listBtn" class="btn btn-block btn-light" type="button" onclick="getCards()">
                         Kártya lista
                     </button>
-                    <button id="downloadBtn" class="btn btn-block btn-light">
+                    <button id="downloadBtn" class="btn btn-block btn-light fa fa-download" type="button" onclick="getDataToPDF()">
                         Letöltés
                     </button>
                 </div>
@@ -82,23 +91,22 @@
         </div>
     </div>
     <div class="container">
-        <div class="table-responsive-sm">
-            <table id="cardsTable" class="table table-striped">
+        <div class="table-responsive">
+            <table id="cardsTable" class="table">
                 <thead>
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Megnevezés</th>
-                        <th scope="col">Nyelv</th>
-                        <th scope="col">Megnevezés</th>
-                        <th scope="col">Nyelv</th>
-                        <th scope="col">Témakör</th>
+                        <th style="width: 80px;">#</th>
+                        <th style="width: 250px;">Megnevezés</th>
+                        <th style="width: 250px;">Nyelv</th>
+                        <th style="width: 250px;">Megnevezés</th>
+                        <th style="width: 250px;">Nyelv</th>
+                        <th style="width: 250px;">Témakör</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
             </table>
         </div>
     </div>
-
     <script src="./JS/main.js"></script>
 </body>
 
