files has been changed

--- a/hozzaadas.html
+++ b/hozzaadas.html
@@ -40,7 +40,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="./hozzaadas.html">Hozzáadás</a>
-                        <a class="dropdown-item" href="#">Törlés</a>
+                        <a class="dropdown-item" href="./torles.html">Törlés</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -130,14 +130,16 @@
                         <button type="button" class="btn btn-light" id="backBtn">
                             <a href="./index.html"><b>Vissza a főoldalra</b></a>
                         </button>
-                        <button type="button" class="btn btn-light" id="mentesBtn" onclick="createUser()">
+                        <button type="button" class="btn btn-light" id="mentesBtn" onclick="createCard()">
                             <b>Mentés</b>
                         </button>
                     </div>
                 </form>
                 <hr>
             </div>
-            <div class="col-sm-3"></div>
+            <div class="col-sm-3">
+                <img class="add-img" src="./lib/images/card2.jpg" alt="card">
+            </div>
         </div>
     </div>
     <script src="./JS/main.js"></script>
