--- a/listak.html
+++ b/listak.html
@@ -11,12 +11,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./lib/bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <!-- <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.6.2/js/dataTables.buttons.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.flash.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.html5.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.print.min.js"></script> -->
     <!--PDFMake-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
@@ -49,7 +43,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="./hozzaadas.html">Hozzáadás</a>
-                        <a class="dropdown-item" href="#">Törlés</a>
+                        <a class="dropdown-item" href="./torles.html">Törlés</a>
                     </div>
                 </li>
                 <li class="nav-item active">
@@ -84,7 +78,7 @@
                         Kártya lista
                     </button>
                     <button id="downloadBtn" class="btn btn-block btn-light fa fa-download" type="button" onclick="getDataToPDF()">
-                        Letöltés
+                        PDF letöltés
                     </button>
                 </div>
             </div>
