--- a/temakorok.html
+++ b/temakorok.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Témakörök</title>
-    <link rel="stylesheet" href="./lib/bootstrap-4.5.0-dist/css/bootstrap.min.css">   
+    <link rel="stylesheet" href="./lib/bootstrap-4.5.0-dist/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- <script src="./node_modules/popper.js/dist/popper.min.js"></script> -->
     <script src="./lib/bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
@@ -40,7 +40,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="./hozzaadas.html">Hozzáadás</a>
-                        <a class="dropdown-item" href="#">Törlés</a>
+                        <a class="dropdown-item" href="./torles.html">Törlés</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -51,8 +51,10 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="keresés" aria-label="Search">
-                <button class="btn btn-outline-info my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></i></button>
+                <input id="themeInput" class="form-control mr-sm-2" type="search" placeholder="keresés"
+                    aria-label="Search">
+                <button class="btn btn-outline-info my-2 my-sm-0" type="submit"><i
+                        class="fa fa-search"></i></i></button>
             </form>
         </div>
     </nav>
@@ -64,101 +66,128 @@
                     <h6>A témák kiválasztásához segítséget nyújthatnak ezek a kis leírások.</h6>
                 </div>
                 <div class="title2">
-                    <h6>A kártyák -> hozzáadás menüpontban az adatok megadásánál lehet kiválasztani a kívánt témakört.</h6>
+                    <h6>A kártyák -> hozzáadás menüpontban az adatok megadásánál lehet kiválasztani a kívánt témakört.
+                    </h6>
                 </div>
             </div>
             <div class="col-sm-6">
-                <div class="list-group">
+                <div class="list-group" id="theme-list">
                     <a class="list-group-item">
                         <div class="d-flex w-100 justify-content-between">
                             <h4 class="mb-1">Bemutatkozás</h4>
                             <small></small>
                         </div>
-                        <p class="mb-1">Itt megadhatsz köszönést, személyleírást, és egyéb bemutatkozással kapcsolatos szavakat, kifejezéseket, pl. hogy hol laksz, hány éves vagy, hol dolgozol, vagy tanulsz és kik a barátaid.</p>                  
+                        <p class="mb-1">Itt megadhatsz köszönést, személyleírást, és egyéb bemutatkozással kapcsolatos
+                            szavakat, kifejezéseket, pl. hogy hol laksz, hány éves vagy, hol dolgozol, vagy tanulsz és
+                            kik a barátaid.</p>
                     </a>
                     <a class="list-group-item">
                         <div class="d-flex w-100 justify-content-between">
                             <h4 class="mb-1">Otthon</h4>
                             <small class="text-muted"></small>
                         </div>
-                        <p class="mb-1">Mindenféle otthoni dolgokat gyűjhetsz össze, a tárgyaktól a helységekig, a tévé nézéstől a főzésen át a takarításig mindent.</p>
+                        <p class="mb-1">Az otthon elsősorban biztonságot és kényelmet nyújt számunkra. Mindenféle otthoni dolgokat gyűjhetsz össze, a tárgyaktól a helységekig, a tévé
+                            nézéstől a főzésen át a takarításig mindent.</p>
                     </a>
                     <a class="list-group-item">
                         <div class="d-flex w-100 justify-content-between">
                             <h4 class="mb-1">Munkahely</h4>
                             <small class="text-muted"></small>
                         </div>
-                        <p class="mb-1">A munkahely a második hely, ahol a legtöbb időt töltjük, ezért fontos, hogy ebben a témakörben is bőven legyen tanulnivaló. Kollégák, főnökök, helyzetek, munkahelyi környezet, stb.</p>
+                        <p class="mb-1">A munkahely a második hely, ahol a legtöbb időt töltjük, ezért fontos, hogy
+                            ebben a témakörben is bőven legyen tanulnivaló. Kollégák, főnökök, helyzetek, munkahelyi
+                            környezet, stb.</p>
                     </a>
                     <a class="list-group-item">
                         <div class="d-flex w-100 justify-content-between">
                             <h4 class="mb-1">Iskola</h4>
                             <small class="text-muted"></small>
                         </div>
-                        <p class="mb-1">Itt a különböző tantárgyaktól a felszerelésig bármit megadhatsz, ami egy iskolában megtalálható, de megadhatsz helyzeteket, szituációkat is, amelyek egy suliban megtörténhetnek.</p>
+                        <p class="mb-1">Itt a különböző tantárgyaktól a felszerelésig bármit megadhatsz, ami egy
+                            iskolában megtalálható, de megadhatsz helyzeteket, szituációkat is, amelyek egy suliban
+                            megtörténhetnek.</p>
                     </a>
                     <a class="list-group-item">
                         <div class="d-flex w-100 justify-content-between">
                             <h4 class="mb-1">Étterem</h4>
                             <small class="text-muted"></small>
                         </div>
-                        <p class="mb-1">Enni mindenki szeret. :) Nem hinném, hogy nagyon be kell mutatni ezt a témakört. Minden, ami kajával kapcsolatos az jöhet ide.</p>
+                        <p class="mb-1">Manapság a gasztro nagy teret hódít. Nem is csoda, hiszen enni mindenki szeret. :) Minden, ami kajával kapcsolatos az jöhet ide. Főzéssel, sütéssel kapcsolatos szavak és
+                            kifejezések.</p>
                     </a>
                     <a class="list-group-item">
                         <div class="d-flex w-100 justify-content-between">
                             <h4 class="mb-1">Utazás</h4>
                             <small class="text-muted"></small>
                         </div>
-                        <p class="mb-1">Az utazás is sokak számára élmény. Minden, ami utazás, ebbe a témakörbe tartozik. A különböző országok, az utazási társaságok, a hotelek, panziók, és a különféle programok. Azonban nem csak nyaralni mehetünk, hanem üzleti útra is és ha eltévednénk, különösen hasznát vesszük majd a nyelvtudásunknak.</p>
+                        <p class="mb-1">Az utazás sokak számára élmény. Ide
+                            tartoznak a különböző országok, utazási társaságok, hotelek, panziók, és a különféle
+                            programok és ha eltévednénk, különösen hasznát vesszük majd a nyelvtudásunknak.</p>
                     </a>
                     <a class="list-group-item">
                         <div class="d-flex w-100 justify-content-between">
                             <h4 class="mb-1">Orvosnál</h4>
                             <small class="text-muted"></small>
                         </div>
-                        <p class="mb-1">Csak orvoshoz ne kelljen menni! Viszont, ha már mindenképpen muszáj, akkor nem árt, ha tudunk néhány kifejezést, hogy legalább el tudjuk mondani mi bajunk. Ugyanígy az is fontos, hogy megértsük az orvos utasításait.</p>
+                        <p class="mb-1">Csak orvoshoz ne kelljen menni! Viszont, ha már mindenképpen muszáj, jó ha tudunk néhány kifejezést, hogy legalább el tudjuk mondani mi bajunk. Ugyanígy az is
+                            fontos, hogy megértsük az orvos utasításait.</p>
                     </a>
                     <a class="list-group-item">
                         <div class="d-flex w-100 justify-content-between">
                             <h4 class="mb-1">Vásárlás</h4>
                             <small class="text-muted"></small>
                         </div>
-                        <p class="mb-1">Nem csak a nők szeretnek vásárolni. Elég kimeríthetetlen ez a témakör, mert annyi mindent lehet vásárolni, szépségápolási cikkeket, élelmiszert, műszaki dolgokat és még sorolhatnám. Ami csak eszedbe jut a vásárlással kapcsolatban annak itt a helye.</p>
+                        <p class="mb-1">Nem csak a nők szeretnek vásárolni. Annyi mindent lehet vásárolni, szépségápolási cikkeket, élelmiszert, műszaki dolgokat Ami csak eszedbe jut a vásárlással kapcsolatban annak itt a helye.</p>
                     </a>
                     <a class="list-group-item">
                         <div class="d-flex w-100 justify-content-between">
                             <h4 class="mb-1">Állatok</h4>
                             <small class="text-muted"></small>
                         </div>
-                        <p class="mb-1">Az állatok nagyon kedves teremtések, róluk is rengeteg dolgot el lehet mondani, a házi kedvencektől a vadállatokig. Az állatkerti állatokról se feledkezzünk el.</p>
+                        <p class="mb-1">Az állatok nagyon kedves teremtések, róluk is rengeteg dolgot el lehet mondani,
+                            a házi kedvencektől a vadállatokig. Az állatkerti állatokról se feledkezzünk el.</p>
                     </a>
                     <a class="list-group-item">
                         <div class="d-flex w-100 justify-content-between">
                             <h4 class="mb-1">Színek</h4>
                             <small class="text-muted"></small>
                         </div>
-                        <p class="mb-1">A színek a művészet világához tartoznak és nem csak a természetben, hanem mindenhol megtalálhatók, pl. színesek a virágok, festmények, ékszerek, bútorok, de van színe a napnak és az égboltnak is.</p>
+                        <p class="mb-1">A színek a művészet világához tartoznak és nem csak a természetben, hanem
+                            mindenhol megtalálhatók, pl. színesek a virágok, festmények, ékszerek, bútorok, de van színe
+                            a napnak és az égboltnak is.</p>
                     </a>
                     <a class="list-group-item">
                         <div class="d-flex w-100 justify-content-between">
                             <h4 class="mb-1">Számok</h4>
                             <small class="text-muted"></small>
                         </div>
-                        <p class="mb-1">Számolni mindenki tud. A számok világa csodálatos nagyon érdekes, gondoljunk csak a számmisztikára.</p>
+                        <p class="mb-1">A számok világa csodálatos és nagyon érdekes, gondoljunk csak a számmisztikára. A számok mindenhol jelen vannak az Univerzumban és rengeteg művelet végezhető velük.</p>
                     </a>
                 </div>
                 <script>
-                    $(document).ready(function(){
-                      $("#myInput").on("keyup", function() {
-                        var value = $(this).val().toLowerCase();
-                        $("#theme-list a").filter(function() {
-                          $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+                    $(document).ready(function () {
+                        $("#themeInput").on("keyup", function () {
+                            var value = $(this).val().toLowerCase();
+                            $("#theme-list a").filter(function () {
+                                $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+                            });
                         });
-                      });
                     });
                 </script>
             </div>
-            <div class="col-sm-3"></div>
+            <div class="col-sm-3">
+                <img class="theme-img1" src="./lib/images/introduction.jpg" alt="card">
+                <img class="theme-img2" src="./lib/images/home.jpg" alt="card">
+                <img class="theme-img3" src="./lib/images/work.jpg" alt="card">
+                <img class="theme-img4" src="./lib/images/school.jpg" alt="card">
+                <img class="theme-img5" src="./lib/images/restaurant.jpg" alt="card">
+                <img class="theme-img6" src="./lib/images/travelling.jpg" alt="card">
+                <img class="theme-img7" src="./lib/images/doctor.jpg" alt="card">
+                <img class="theme-img8" src="./lib/images/shopping.jpg" alt="card">
+                <img class="theme-img9" src="./lib/images/animals.jpg" alt="card">
+                <img class="theme-img10" src="./lib/images/colours.jpg" alt="card">
+                <img class="theme-img11" src="./lib/images/numbers.jpg" alt="card">
+            </div>
         </div>
     </div>
 </body>
