--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="col-sm-3">
-                <img class="index-img" src="./lib/images/kartya2.jpg" alt="card">
+                <img class="index-img" src="./lib/images/card1.jpg" alt="card">
             </div>
         </div>
     </div>
