--- a/teszt1.html
+++ b/teszt1.html
@@ -291,7 +291,9 @@
                     </button>
                 </div>
             </div>
-            <div class="col-sm-3"></div>
+            <div class="col-sm-3">
+                <img class="index-img" src="./lib/images/test1.jpg" alt="card">
+            </div>
         </div>
     </div>
 </body>
