--- a/temakorok.html
+++ b/temakorok.html
@@ -70,99 +70,86 @@
                     </h6>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-9">
                 <div class="list-group" id="theme-list">
                     <a class="list-group-item">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h4 class="mb-1">Bemutatkozás</h4>
-                            <small></small>
-                        </div>
-                        <p class="mb-1">Itt megadhatsz köszönést, személyleírást, és egyéb bemutatkozással kapcsolatos
-                            szavakat, kifejezéseket, pl. hogy hol laksz, hány éves vagy, hol dolgozol, vagy tanulsz és
-                            kik a barátaid.</p>
+                        <div class="clearfix">  
+                            <img class="theme-img" src="./lib/images/introduction.jpg" alt="img" style="border: 1px solid #ccc;">
+                            <h4>Bemutatkozás</h4>
+                            Itt megadhatsz köszönést, személyleírást, és egyéb bemutatkozással kapcsolatos szavakat, kifejezéseket, pl. hogy hol laksz, hány éves vagy, hol dolgozol, vagy tanulsz és kik a barátaid.
+                        </div>       
                     </a>
                     <a class="list-group-item">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h4 class="mb-1">Otthon</h4>
-                            <small class="text-muted"></small>
-                        </div>
-                        <p class="mb-1">Az otthon elsősorban biztonságot és kényelmet nyújt számunkra. Mindenféle otthoni dolgokat gyűjhetsz össze, a tárgyaktól a helységekig, a tévé
-                            nézéstől a főzésen át a takarításig mindent.</p>
+                        <div class="clearfix">  
+                            <img class="theme-img" src="./lib/images/home.jpg" alt="img">
+                            <h4>Otthon</h4>
+                            Az otthon elsősorban biztonságot és kényelmet nyújt számunkra. Mindenféle otthoni dolgokat gyűjhetsz össze, a tárgyaktól a helységekig, a tévé nézéstől a főzésen át a takarításig mindent.
+                        </div>       
                     </a>
                     <a class="list-group-item">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h4 class="mb-1">Munkahely</h4>
-                            <small class="text-muted"></small>
-                        </div>
-                        <p class="mb-1">A munkahely a második hely, ahol a legtöbb időt töltjük, ezért fontos, hogy
-                            ebben a témakörben is bőven legyen tanulnivaló. Kollégák, főnökök, helyzetek, munkahelyi
-                            környezet, stb.</p>
+                        <div class="clearfix">  
+                            <img class="theme-img" src="./lib/images/work.jpg" alt="img">
+                            <h4>Munkahely</h4>
+                            A munkahely a második hely, ahol a legtöbb időt töltjük, ezért fontos, hogy ebben a témakörben is bőven legyen tanulnivaló. Kollégák, főnökök, helyzetek, munkahelyi környezet, stb
+                        </div>       
                     </a>
                     <a class="list-group-item">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h4 class="mb-1">Iskola</h4>
-                            <small class="text-muted"></small>
-                        </div>
-                        <p class="mb-1">Itt a különböző tantárgyaktól a felszerelésig bármit megadhatsz, ami egy
-                            iskolában megtalálható, de megadhatsz helyzeteket, szituációkat is, amelyek egy suliban
-                            megtörténhetnek.</p>
+                        <div class="clearfix">  
+                            <img class="theme-img" src="./lib/images/school.jpg" alt="img">
+                            <h4>Iskola</h4>
+                            Itt a különböző tantárgyaktól a felszerelésig bármit megadhatsz, ami egy iskolában megtalálható, de megadhatsz helyzeteket, szituációkat is, amelyek egy suliban megtörténhetnek.
+                        </div>       
                     </a>
                     <a class="list-group-item">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h4 class="mb-1">Étterem</h4>
-                            <small class="text-muted"></small>
-                        </div>
-                        <p class="mb-1">Manapság a gasztro nagy teret hódít. Nem is csoda, hiszen enni mindenki szeret. :) Minden, ami kajával kapcsolatos az jöhet ide. Főzéssel, sütéssel kapcsolatos szavak és
-                            kifejezések.</p>
+                        <div class="clearfix">  
+                            <img class="theme-img" src="./lib/images/restaurant.jpg" alt="img">
+                            <h4>Étterem</h4>
+                            Manapság a gasztro nagy teret hódít. Nem is csoda, hiszen enni mindenki szeret. :) Minden, ami kajával kapcsolatos az jöhet ide. Főzéssel, sütéssel kapcsolatos szavak és kifejezések.
+                        </div>       
                     </a>
                     <a class="list-group-item">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h4 class="mb-1">Utazás</h4>
-                            <small class="text-muted"></small>
-                        </div>
-                        <p class="mb-1">Az utazás sokak számára élmény. Ide
-                            tartoznak a különböző országok, utazási társaságok, hotelek, panziók, és a különféle
-                            programok és ha eltévednénk, különösen hasznát vesszük majd a nyelvtudásunknak.</p>
+                        <div class="clearfix">  
+                            <img class="theme-img" src="./lib/images/travelling.jpg" alt="img">
+                            <h4>Utazás</h4>
+                            Az utazás sokak számára élmény. Ide tartoznak a különböző országok, utazási társaságok, hotelek, panziók, és a különféle programok és ha eltévednénk, különösen hasznát vesszük majd a nyelvtudásunknak.
+                        </div>       
                     </a>
                     <a class="list-group-item">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h4 class="mb-1">Orvosnál</h4>
-                            <small class="text-muted"></small>
-                        </div>
-                        <p class="mb-1">Csak orvoshoz ne kelljen menni! Viszont, ha már mindenképpen muszáj, jó ha tudunk néhány kifejezést, hogy legalább el tudjuk mondani mi bajunk. Ugyanígy az is
-                            fontos, hogy megértsük az orvos utasításait.</p>
+                        <div class="clearfix">  
+                            <img class="theme-img" src="./lib/images/doctor.jpg" alt="img">
+                            <h4>Orvosnál</h4>
+                            Csak orvoshoz ne kelljen menni! Viszont, ha már mindenképpen muszáj, jó ha tudunk néhány kifejezést, hogy legalább el tudjuk mondani mi bajunk. Ugyanígy az is fontos, hogy megértsük az orvos utasításait.
+                        </div>       
                     </a>
                     <a class="list-group-item">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h4 class="mb-1">Vásárlás</h4>
-                            <small class="text-muted"></small>
-                        </div>
-                        <p class="mb-1">Nem csak a nők szeretnek vásárolni. Annyi mindent lehet vásárolni, szépségápolási cikkeket, élelmiszert, műszaki dolgokat Ami csak eszedbe jut a vásárlással kapcsolatban annak itt a helye.</p>
+                        <div class="clearfix">  
+                            <img class="theme-img" src="./lib/images/shopping.jpg" alt="img">
+                            <h4>Vásárlás</h4>
+                            Nem csak a nők szeretnek vásárolni. Annyi mindent lehet vásárolni, szépségápolási cikkeket, élelmiszert, műszaki dolgokat Ami csak eszedbe jut a vásárlással kapcsolatban annak itt a helye.
+                        </div>       
                     </a>
                     <a class="list-group-item">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h4 class="mb-1">Állatok</h4>
-                            <small class="text-muted"></small>
-                        </div>
-                        <p class="mb-1">Az állatok nagyon kedves teremtések, róluk is rengeteg dolgot el lehet mondani,
-                            a házi kedvencektől a vadállatokig. Az állatkerti állatokról se feledkezzünk el.</p>
+                        <div class="clearfix">  
+                            <img class="theme-img" src="./lib/images/animals.jpg" alt="img">
+                            <h4>Állatok</h4>
+                            Az állatok nagyon kedves és intelligens teremtések, róluk is rengeteg dolgot el lehet mondani, a házi kedvencektől a vadon élő állatokig. Azért az állatkerti állatokról se feledkezzünk el.
+                        </div>       
                     </a>
                     <a class="list-group-item">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h4 class="mb-1">Színek</h4>
-                            <small class="text-muted"></small>
-                        </div>
-                        <p class="mb-1">A színek a művészet világához tartoznak és nem csak a természetben, hanem
-                            mindenhol megtalálhatók, pl. színesek a virágok, festmények, ékszerek, bútorok, de van színe
-                            a napnak és az égboltnak is.</p>
+                        <div class="clearfix">  
+                            <img class="theme-img" src="./lib/images/colours.jpg" alt="img">
+                            <h4>Színek</h4>
+                            A színek a művészet világához tartoznak és nem csak a természetben, hanem mindenhol megtalálhatók, pl. színesek a virágok, festmények, ékszerek, bútorok, de van színe a napnak és az égboltnak is.
+                        </div>       
                     </a>
                     <a class="list-group-item">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h4 class="mb-1">Számok</h4>
-                            <small class="text-muted"></small>
-                        </div>
-                        <p class="mb-1">A számok világa csodálatos és nagyon érdekes, gondoljunk csak a számmisztikára. A számok mindenhol jelen vannak az Univerzumban és rengeteg művelet végezhető velük.</p>
+                        <div class="clearfix">  
+                            <img class="theme-img" src="./lib/images/numbers.jpg" alt="img" style="border: 1px solid #ccc;">
+                            <h4>Számok</h4>
+                            A számok világa csodálatos és nagyon érdekes, gondoljunk csak a számmisztikára. A számok mindenhol jelen vannak az Univerzumban és rengeteg művelet végezhető velük.
+                        </div>       
                     </a>
+                    <hr>
                 </div>
                 <script>
                     $(document).ready(function () {
@@ -174,19 +161,6 @@
                         });
                     });
                 </script>
-            </div>
-            <div class="col-sm-3">
-                <img class="theme-img1" src="./lib/images/introduction.jpg" alt="card">
-                <img class="theme-img2" src="./lib/images/home.jpg" alt="card">
-                <img class="theme-img3" src="./lib/images/work.jpg" alt="card">
-                <img class="theme-img4" src="./lib/images/school.jpg" alt="card">
-                <img class="theme-img5" src="./lib/images/restaurant.jpg" alt="card">
-                <img class="theme-img6" src="./lib/images/travelling.jpg" alt="card">
-                <img class="theme-img7" src="./lib/images/doctor.jpg" alt="card">
-                <img class="theme-img8" src="./lib/images/shopping.jpg" alt="card">
-                <img class="theme-img9" src="./lib/images/animals.jpg" alt="card">
-                <img class="theme-img10" src="./lib/images/colours.jpg" alt="card">
-                <img class="theme-img11" src="./lib/images/numbers.jpg" alt="card">
             </div>
         </div>
     </div>
