--- a/index.html
+++ b/index.html
@@ -74,13 +74,27 @@
                 <div class="index-title">
                     <h3>Nyelvtanuló kártyák</h3>
                 </div>
-                <div class="card">
+                <!-- <div class="card">
                     <div id="cardBody" class="card-body">
                         <h4 id="cardTitle" class="card-title">Good morning!</h4>
                         <h6 id="subtitle1" class="card-subtitle mb-2 text-muted">Angol</h6>
                         <h4 id="cardTitle2" class="card-title2">Jó reggelt!</h4>
                         <h6 id="subtitle2" class="card-subtitle2 mb-2 text-muted">Magyar</h6>
                         <h6 id="theme" class="card-subtitle3 mb-2 text-muted">Bemutatkozás</h6>
+                    </div>
+                </div> -->
+                <div class="flip-card">
+                    <div id="cardBody" class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <p id="cardTitle" class="card-title">Good morning!</p>
+                            <p id="subtitle1" class="card-subtitle mb-2 text-muted">Angol</p>
+                            <p id="theme">Bemutatkozás</p>
+                        </div>
+                        <div class="flip-card-back">
+                            <p id="cardTitle2" class="card-title2">Jó reggelt!</p>
+                            <p id="subtitle2" class="card-subtitle2 mb-2 text-muted">Magyar</p>
+                            <p id="theme2">Bemutatkozás</p>
+                        </div>
                     </div>
                 </div>
                 <div>
