--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Nyelvtanuló kártyák</title>
     <link rel="stylesheet" href="./lib/bootstrap-4.5.0-dist/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- <script src="./node_modules/popper.js/dist/popper.min.js"></script> -->
+    <script src="./node_modules/popper.js/dist/popper.min.js"></script>
     <script src="./lib/bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -101,6 +101,10 @@
                 <img class="index-img" src="./lib/images/card1.jpg" alt="card">
             </div>
         </div>
+    </div>
+    <div class="footer bg-dark text-center">
+        <p>Languages cards</p>
+        <p class="date"></p>
     </div>
 
     <script src="./JS/main.js"></script>
