index.html has been changed

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         tempóban haladva.</h6>
                 </div>
                 <div class="title2">
-                    <h6>A kártyák segítségével könnyebbé és egyszerűbbé válik a nyelvtanulás, ugyanis a kártyák
+                    <h6>A kártyák segítségével könnyebbé és egyszerűbbé válik a nyelvtanulás, mivel a kártyák
                         lapozgatásával, egyesével tudjuk memorizálni és begyakorolni a szavakat, kifejezéseket.</h6>
                 </div>
             </div>
@@ -90,16 +90,16 @@
                     </div>
                 </div>
                 <div>
-                    <button type="button" class="btn btn-light" id="previousButton" onclick="getPreviousCard()">
+                    <button type="button" class="btn btn-light previousButton" onclick="getPreviousCard()">
                         <b>Előző kártya</b>
                     </button>
-                    <button type="button" class="btn btn-light" id="nextButton" onclick="getNextCard()">
+                    <button type="button" class="btn btn-light nextButton" onclick="getNextCard()">
                         <b>Következő kártya</b>
                     </button>
                 </div>
             </div>
             <div class="col-sm-3">
-                <img class="index-img" src="./lib/images/card1.jpg" alt="card">
+                <img class="index-img" src="./lib/images/pexels-photo-4466381.jpeg" alt="card">
             </div>
         </div>
     </div>
