nyelvek.html has been changed

--- a/nyelvek.html
+++ b/nyelvek.html
@@ -71,8 +71,8 @@
                     <img class="lang-img2" src="./lib/images/brasilian.jpg" alt="card">
                 </div>
             </div>
-            <div class="col-sm-6" id="langList">
-                <ul class="list-group" id="lang-list">
+            <div class="col-sm-6">
+                <ul class="list-group lang-list">
                     <li class="list-group-item">Angol</li>
                     <li class="list-group-item">Német</li>
                     <li class="list-group-item">Francia</li>
@@ -100,6 +100,16 @@
                 <img class="lang-img6" src="./lib/images/spanish.jpg" alt="card">
             </div>
         </div>
+    </div>
+    <div class="footer bg-dark">        
+        <div class="icons">
+            <a href="#" onclick='window.open("https://www.facebook.com");return false;' class="fa fa-facebook"></a>
+            <a href="#" onclick='window.open("https://www.skype.com");return false;' class="fa fa-skype"></a>
+            <a href="#" onclick='window.open("https://www.whatsapp.com");return false;' class="fa fa-whatsapp"></a>
+            <a href="#" onclick='window.open("https://www.google.com");return false;' class="fa fa-google"></a>
+        </div>   
+        <p>Nyelvtanuló kártyák</p>    
+        <p class="date"></p>
     </div>
 </body>
 
