--- a/hozzaadas.html
+++ b/hozzaadas.html
@@ -136,9 +136,7 @@
                 </form>
                 <hr>
             </div>
-            <div class="col-sm-3">
-                <!-- <img class="add-img" src="./lib/images/pexels-photo-442574.jpeg" alt="card"> -->
-            </div>
+            <div class="col-sm-3"></div>
         </div>
     </div>
     <div class="footer bg-dark">        
