teszt2.html has been changed

--- a/teszt2.html
+++ b/teszt2.html
@@ -72,13 +72,13 @@
             <div class="col-sm-6">
                 <ul class="nav justify-content-center test-nav">
                     <li class="nav-item">
-                        <a class="nav-link nav1" id="" href="./teszt1.html">Teszt 1</a>
+                        <a class="nav-link nav1" href="./teszt1.html">Teszt 1</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav2" id="" href="./teszt2.html">Teszt 2</a>
+                        <a class="nav-link nav2" href="./teszt2.html">Teszt 2</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav3" id="" href="./teszt3.html">Teszt 3</a>
+                        <a class="nav-link nav3" href="./teszt3.html">Teszt 3</a>
                     </li>
                 </ul>
                 <form>
