teszt3.html and main.js have been changed

--- a/teszt3.html
+++ b/teszt3.html
@@ -301,14 +301,14 @@
                             <h1 class="fa fa-close"></h1>
                         </div>
                         <div class="form-group">
-                            <input id="radio3-10" name="answer30" type="radio" value="Hasn’t she still finished"
+                            <input id="radio3-10" name="answer30" type="radio" value="Hasn't she still finished"
                                 class="form-group">
-                            <label for="">Hasn’t she still finished</label>
+                            <label for="">Hasn't she still finished</label>
                             <h1 class="fa fa-check"></h1>
                         </div>
                         <div class="form-group">
-                            <input name="answer30" type="radio" value="Haven’t she still finished" class="form-group">
-                            <label for="">Haven’t she still finished</label>
+                            <input name="answer30" type="radio" value="Haven't she still finished" class="form-group">
+                            <label for="">Haven't she still finished</label>
                             <h1 class="fa fa-close"></h1>
                         </div>
                         <div class="form-group">
