two files have been modified

--- a/hozzaadas.html
+++ b/hozzaadas.html
@@ -57,9 +57,8 @@
             </form>
         </div>
     </nav>
-    <div class="container add-container">
-        <img class="add-img" src="./lib/images/pexels-photo-442574.jpeg" alt="card">
-        <div class="row add-row">
+    <div class="container">        
+        <div class="row">
             <div class="col-sm-3">
                 <div class="title1">
                     <h6>Ezen az oldalon új szavakat, vagy kifejezéseket lehet felvenni, amelyek majd megjelennek a
@@ -136,7 +135,9 @@
                 </form>
                 <hr>
             </div>
-            <div class="col-sm-3"></div>
+            <div class="col-sm-3">
+                <img class="index-img" src="./lib/images/pexels-photo-442574.jpeg" alt="card">
+            </div>
         </div>
     </div>
     <div class="footer bg-dark">        
